gitops/apps/registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zot-registry
  namespace: registry
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  selector:
    app: zot-registry
